--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<html lang="es-AR">
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/poc-project/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="SPA de Andreani" />
+  <meta content="Andreani, almacenamiento, tecnologia, empresa, correo, distribucion, logistica" name="keywords" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&family=Rubik:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
+
+  <link rel="manifest" href="./manifest.webmanifest" data-preserve>
+  <script id="register" data-preserve>
+    if ('serviceWorker' in navigator) { window.addEventListener('load', () => { navigator.serviceWorker.register('/poc-project/sw.js', { scope: '/poc-project/' }) }) }
+  </script>
+  <title>Poc Widget</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+
+</body>
+
 </html>
